--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=UserServiceMay25
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://localhost:3306/UserServiceMay25
+spring.datasource.username=UserServiceMay25User
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.jpa.open-in-view=true
+server.port=8082
+spring.jpa.database-plateform=org.hibernate.dialect.MySQL8Dialect
+
